--- a/css/layout.css
+++ b/css/layout.css
@@ -223,9 +223,9 @@
 .about-profile__text {
   font-family: "Inter", sans-serif;
   font-size: 16px;
-  line-height: 1.7;
+  line-height: 1.8;
   margin: 0;
-  max-width: 60ch;
+  max-width: 75ch;
 }
 
 .about-profile__image img {
@@ -340,5 +340,24 @@
 
   .about-profile__subtitle {
     font-size: 16px;
+  }
+}
+/* Mobile nav */
+@media (max-width: 700px) {
+  .site-header.nav-open .nav-links {
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
+
+    position: absolute;
+    top: 99px;
+    left: 0;
+    right: 0;
+
+    padding: 18px 28px;
+    background: var(--bg);
+    box-shadow: var(--shadow);
+    border-bottom: 1px solid #696969;
+    z-index: 999;
   }
 }
