--- a/css/layout.css
+++ b/css/layout.css
@@ -214,7 +214,8 @@
 }
 
 .about-profile__divider {
-  width: 700px;
+  width: 100%;
+  max-width: 700px;
   height: 1px;
   background: #ffffff;
   margin-bottom: 40px;
@@ -288,9 +289,10 @@
   }
 
   .page {
-    padding-left: 0;
-    padding-right: 0;
+    padding-left: 16px;
+    padding-right: 16px;
   }
+
   .hero {
     padding-left: 0;
     padding-right: 0;
